katars/tests/snaps/snapshots/snap_errors__unknown_module.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"import nonexistent\")"
---
Error: unknown module 'nonexistent'
   ╭─[<test>:1:8]
   │
 1 │ import nonexistent
   │        ─────┬─────  
   │             ╰─────── unknown module 'nonexistent'
───╯
